--- a/src/pages/qui-suis-je.astro
+++ b/src/pages/qui-suis-je.astro
@@ -41,10 +41,16 @@ import Layout from '../layouts/Layout.astro';
                     </div>
                     <div class="mt-5 prose prose-indigo text-gray-500 mx-auto lg:max-w-none lg:row-start-1 lg:col-start-1">
                         <p>
-                            Passionnée par le fonctionnement du corps humain et la santé, je me suis orientée vers l'ostéopathie pour son approche manuelle et holistique.
+                            L'ostéopathie est une approche thérapeutique manuelle douce qui se fonde sur une vision globale de la structure du corps humain.
                         </p>
                         <p>
-                            Au cours de mon cursus et de mes expériences professionnelles, j'ai développé une affinité particulière pour la périnatalité. Accompagner les futures mamans pendant leur grossesse et recevoir les nouveau-nés pour leur premier bilan est une partie essentielle de ma pratique.
+                             Je pratique des manipulations manuelles du système musculo-squelettique et utilise des techniques de relâchement myofascial afin de soulager les tensions, les déséquilibres et les douleurs.
+                        </p>
+                        <p>
+                            Par exemple, l'ostéopathie peut soigner les maux de dos, les entorses, le stress, les règles douloureuses ou encore les migraines. L'ostéopathie est à visée préventive et curative.
+                        </p>
+                        <p>
+                            Je reçois différents types de patients au cabinet : des nourrissons, des enfants, des sportifs, des femmes enceintes ou encore des seniors.
                         </p>
                         <h3 class="text-xl font-bold text-gray-900 mt-6">Formations et Diplômes</h3>
                         <ul role="list" class="mt-4 list-disc list-inside space-y-2">
