--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -131,6 +131,9 @@ import Layout from '../layouts/Layout.astro';
                         2 Rue de Saint-Sulpice<br>
                         44590 Sion-les-Mines
                     </p>
+                    <p class="text-gray-600 mb-2">
+                        Téléphone : <a href="tel:0623490415" class="text-teal-600 hover:underline">06 23 49 04 15</a>
+                    </p>
                     <p class="text-gray-600 mb-6">
                         <strong>Parking gratuit</strong> disponible devant le cabinet.
                     </p>
