--- a/src/pages/deroulement.astro
+++ b/src/pages/deroulement.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Déroulement d'une séance - Cécile ROGER Ostéopathe">
+<Layout title="Déroulement d'une séance - Cécile ROGER Ostéopathe" description="Découvrez comment se déroule une séance d'ostéopathie au cabinet de Sion-les-Mines : Anamnèse, tests et traitement adapté.">
     <div class="py-12 bg-gray-50 overflow-hidden">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center">
