--- a/src/pages/qui-suis-je.astro
+++ b/src/pages/qui-suis-je.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Qui suis-je ? - Cécile ROGER Ostéopathe Sion-les-Mines">
+<Layout title="Qui suis-je ? - Cécile ROGER Ostéopathe Sion-les-Mines" description="Cécile ROGER, Ostéopathe D.O. diplômée de l'IORB. Formée en périnatalité et approche somato-émotionnelle. Découvrez mon parcours.">
     <div class="bg-white overflow-hidden">
         <div class="relative max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:px-8">
             <div class="hidden lg:block bg-gray-50 absolute top-0 bottom-0 left-3/4 w-screen"></div>
