--- a/src/pages/tarifs.astro
+++ b/src/pages/tarifs.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Tarifs et Infos Pratiques - Cécile ROGER Ostéopathe">
+<Layout title="Tarifs et Infos Pratiques - Cécile ROGER Ostéopathe" description="Tarifs des consultations d'ostéopathie à Sion-les-Mines : 50€. Remboursement mutuelle possible. Paiement par chèque ou espèces.">
     <div class="bg-white py-16 px-4 overflow-hidden sm:px-6 lg:px-8 lg:py-24">
         <div class="relative max-w-xl mx-auto">
             <div class="text-center">
