--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -17,6 +17,9 @@
           <a href="/deroulement" class="border-transparent text-gray-500 hover:border-teal-500 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
             Déroulement
           </a>
+          <a href="/faq" class="border-transparent text-gray-500 hover:border-teal-500 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
+            FAQ
+          </a>
           <a href="/tarifs" class="border-transparent text-gray-500 hover:border-teal-500 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium">
             Tarifs & Infos
           </a>
