--- a/src/pages/qui-suis-je.astro
+++ b/src/pages/qui-suis-je.astro
@@ -22,10 +22,10 @@ import Layout from '../layouts/Layout.astro';
                     <div class="relative text-base mx-auto max-w-prose lg:max-w-none">
                         <figure>
                             <div class="aspect-w-12 aspect-h-7 lg:aspect-none">
-                                <img class="rounded-lg shadow-lg object-cover object-center" src="https://images.unsplash.com/photo-1580489944761-15a19d654956?ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="Portrait Cécile ROGER Ostéopathe" width="1184" height="1376">
+                                <img class="rounded-lg shadow-lg object-cover object-center" src="https://images.unsplash.com/photo-1580489944761-15a19d654956?ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="Portrait Cécile ROGER Ostéopathe" width="1184" height="1376" loading="lazy">
                             </div>
-                            <figcaption class="mt-3 flex text-sm text-gray-500">
-                                <svg class="flex-none w-5 h-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                            <figcaption class="mt-3 flex text-sm text-gray-600">
+                                <svg class="flex-none w-5 h-5 text-gray-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                                     <path fill-rule="evenodd" d="M4 5a2 2 0 00-2 2v8a2 2 0 002 2h12a2 2 0 002-2V7a2 2 0 00-2-2h-1.586a1 1 0 01-.707-.293l-1.414-1.414A1 1 0 0011.586 3H8.414a1 1 0 00-.707.293L6.293 4.707A1 1 0 015.586 5H4zm6 9a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd" />
                                 </svg>
                                 <span class="ml-2">Cécile ROGER au cabinet</span>
@@ -35,11 +35,11 @@ import Layout from '../layouts/Layout.astro';
                 </div>
                 <div class="mt-8 lg:mt-0">
                     <div class="text-base max-w-prose mx-auto lg:max-w-none">
-                        <p class="text-lg text-gray-500">
+                        <p class="text-lg text-gray-600">
                             Diplômée d'ostéopathie après une formation exclusive en 5 ans, j'ai à cœur de proposer une prise en charge globale et personnalisée à chacun de mes patients.
                         </p>
                     </div>
-                    <div class="mt-5 prose prose-indigo text-gray-500 mx-auto lg:max-w-none lg:row-start-1 lg:col-start-1">
+                    <div class="mt-5 prose prose-indigo text-gray-600 mx-auto lg:max-w-none lg:row-start-1 lg:col-start-1">
                         <p>
                             L'ostéopathie est une approche thérapeutique manuelle douce qui se fonde sur une vision globale de la structure du corps humain.
                         </p>
