--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -33,6 +33,12 @@ const currentYear = new Date().getFullYear();
               Prendre rendez-vous sur Doctolib
             </a>
           </li>
+          <li>
+            <a href="https://www.facebook.com/profile.php?id=61584621755891" target="_blank" rel="noopener noreferrer" class="text-base hover:text-gray-900 flex items-center">
+              <svg class="h-5 w-5 mr-2" fill="currentColor" viewBox="0 0 24 24"><path d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z"/></svg>
+              Suivre sur Facebook
+            </a>
+          </li>
         </ul>
       </div>
       <div>
