--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Cécile ROGER - Ostéopathe à Sion-les-Mines | Nourrissons, Femmes Enceintes">
+<Layout title="Cécile ROGER - Ostéopathe à Sion-les-Mines | Périnatalité">
 	<!-- Hero Section -->
 	<div class="relative bg-teal-50 overflow-hidden">
 		<div class="max-w-7xl mx-auto">
