--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -142,7 +142,7 @@ import Layout from '../layouts/Layout.astro';
                         </a>
                     </p>
                     <p class="text-gray-600 mb-6">
-                        <strong>Parking gratuit</strong> disponible devant le cabinet.
+                        <strong>Parking gratuit</strong> disponible derrière le cabinet (entrée située à côté du distributeur à pizza).
                     </p>
                     <a href="https://www.doctolib.fr/osteopathe/sion-les-mines/cecile-roger-erce-en-lamee" target="_blank" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-teal-600 hover:bg-teal-700">
                         Prendre rendez-vous
